--- a/public/css/filling.show.css
+++ b/public/css/filling.show.css
@@ -7,7 +7,8 @@
 	padding: 0;
 	border-collapse: collapse;
     position: relative;
-	overflow:hidden;
+	overflow: hidden;
+	border: none;
 	border-bottom: solid;
 	border-bottom-width: 1px;
 }
