--- a/public/css/crossword.show.css
+++ b/public/css/crossword.show.css
@@ -35,6 +35,12 @@
 	overflow:hidden;
 }
 
+#vkb_container{
+	width:470px;
+	height:185px;
+	clear:both;
+}
+
 #hints_container{
 	float: left;
 	width:20%;
@@ -49,16 +55,12 @@
     margin-left: 50px;
 }
 
-.active{
-    border-color: blue;
+.btn{
+	margin: 20px;
 }
 
-.question_number{
-    position: absolute;
-    font-size: 12px;
-    color: grey;
-    left: 3px;
-    top: 3px;
+.active{
+    border-color: blue;
 }
 
 td{
