--- a/public/css/main.css
+++ b/public/css/main.css
@@ -39,41 +39,36 @@ body {
   color: #061a20;
 }
 
-.navbar-default {
-  background-color: #7ccde5;
-}
-
 /* Wrapper for page content to push down footer */
 #wrap {
   min-height: 100%;
   height: auto !important;
   height: 100%;
   /* Negative indent footer by its height */
-  margin: 0 auto -180px;
+  margin: 0 auto -92px;
   /* Pad bottom by footer height */
   /* padding: 0 0 60px; */
 }
 
-.push {
-    height: 180px;
-}
 
 #footer{
-  height: 180px;
+  height: 92px;
 
   background-color: #030d10;
   color: #eef8fc;
 }
 
-#footer .table th, .table td {
-     border-top: none !important;
- }
+#footer .contact {
+  margin: 10px;
+}
 
 #footer .shameless-self-promotion {
+  margin: 10px;
   font-family: "Ubuntu";
   font-size: 12px;
 }
 
-#footer .shameless-self-promotion .bottaajat-link {
+#footer .footer-link {
+  margin-right: 10px;
   color: #8cd3e8;
 }
