fileupload toimii, muutettava kuvien yhdistämisen luontia

--- a/public/css/task.create.css
+++ b/public/css/task.create.css
@@ -7,5 +7,12 @@
 }
 
 .word_pair{
+	display: inline-block;
 	margin-top: 2px;
+}
+
+input[type="file"] {
+	max-width: 50%;
+	overflow: hidden;
+	display: inline-block;
 }
