--- a/public/css/task.create.css
+++ b/public/css/task.create.css
@@ -8,7 +8,18 @@
 
 .word_pair{
 	display: inline-block;
-	margin-top: 2px;
+	margin-top: 5px;
+}
+
+.column{
+	float:left;
+	width: 33%;
+}
+
+.question{
+	display: inline-block;
+	margin-top: 5px;
+	clear: both;
 }
 
 input[type="file"] {
