--- a/public/css/task.create.css
+++ b/public/css/task.create.css
@@ -1,14 +1,22 @@
-#text{
+.text{
 	width:100%;
 }
 
-.btn{
-	margin: 10px 10px 10px 10px;
+.form-control{
+	margin-top: 5px;
+}
+
+.btn-danger{
+	margin-left: 10px;
 }
 
 .word_pair{
 	display: inline-block;
 	margin-top: 5px;
+}
+
+.warning{
+	background-color: red;
 }
 
 .column{
@@ -20,6 +28,10 @@
 	display: inline-block;
 	margin-top: 5px;
 	clear: both;
+}
+
+.word{
+	margin-top: 5px;
 }
 
 input[type="file"] {
