--- a/public/css/main.css
+++ b/public/css/main.css
@@ -2,6 +2,8 @@ html,
 body {
   font-family: "Roboto Slab";
   height: 100%;
+  background-image: url("../img/bodybg_russia.jpg");
+  background-size: 382px auto;
   background-repeat: repeat;
 }
 
